--- a/performance.html
+++ b/performance.html
@@ -19,7 +19,7 @@
 				pointStrokeColor : "#fff",
 				pointHighlightFill : "#fff",
 				pointHighlightStroke : "rgba(220,0,0,1)",
-				data : [2702.5,2188.0,3263.7,3995.8,4352.6,4067.5,3710.5,4220.7,3124.4,4864.1,5497.3,5424.7,0.0,5386.7,5095.5,3443.6,4320.4,4695.1,0.0,5535.7,5756.1,5459.1,5459.8,5616.2,5281.7,5415.5,5533.4,5444.3,5222.6,4935.4,0.0,5011.4,5070.8,4911.1,4669.8,4542.3,4620.6,4652.9,4558.4,3888.0,3994.6,4559.5,4235.4,3711.8,3582.5,3647.8,0.0,3236.7,3269.9,2884.9,3033.7,0.0,2630.4,2530.0,2191.7,1790.6,1423.2,0.0,1162.9,945.2,]
+				data : []
 				},
 				{
 				label: "Performance",
@@ -29,7 +29,7 @@
 				pointStrokeColor : "#fff",
 				pointHighlightFill : "#fff",
 				pointHighlightStroke : "rgba(220,0,0,1)",
-				data : [0.0,0.0,0.0,0.0,0.0,0.0,783.0,33.2,842.2,1036.6,1213.8,1506.4,1705.4,1744.8,1873.8,2128.9,2245.1,1360.3,491.7,1560.7,1746.5,1812.1,1646.1,1660.3,1729.9,1783.7,1760.7,1708.0,1616.4,1851.3,1617.3,1606.9,1425.6,1409.9,1574.6,1315.2,1301.8,1260.1,862.1,1000.9,876.7,826.3,763.9,797.3,544.4,621.5,519.5,557.4,569.2,379.8,475.7,156.6,327.3,180.3,132.9,80.6,0.0,56.9,0.0,0.0,]
+				data : []
 				},
 				{
 				label: "Performance",
@@ -39,7 +39,7 @@
 				pointStrokeColor : "#fff",
 				pointHighlightFill : "#fff",
 				pointHighlightStroke : "rgba(220,0,0,1)",
-				data : [0.0,0.0,0.0,0.0,0.0,0.0,647.5,16.6,697.2,875.1,1024.5,1285.4,1463.3,1491.9,1605.8,1831.2,1933.3,1141.0,336.9,1309.4,1475.5,1534.8,1378.2,1387.7,1449.4,1494.5,1470.8,1421.0,1335.6,1546.7,1333.2,1321.4,1155.3,1138.7,1288.2,1050.8,1039.0,1001.1,638.2,763.9,654.8,607.3,550.4,581.2,351.1,422.2,327.3,365.3,377.2,201.6,287.0,78.3,163.7,90.1,66.4,40.3,0.0,28.5,0.0,0.0,]
+				data : []
 				},
 			]
 		}
@@ -50,6 +50,6 @@
 		});
 	}
 	</script>
-	Harvest : 7.7 KWh. Loss: 1.8 KWh (1.02 Euro)
+	Harvest : 0.0 KWh. Loss: 0.0 KWh (0.0 Euro)
 	</body>
 </html>
