--- a/villavalwig.htm
+++ b/villavalwig.htm
@@ -4,21 +4,8 @@
       <title>Ilse</title>
    </head>
    <body>
-      <img alt="Nederlands" src="./IlseScrabbleLetters.png"><br>
-
-      Taal / Sprache / Language<br>
-
-      <a href="https://youtu.be/XJsST-XodEc">
-         <img alt="Nederlands" src="./Flag-of-The-Netherlands3.png"
-         width=225" height="105">
-      </a>
-        <a href="https://youtu.be/WjttVXPcjks">
-         <img alt="Deutsch" src="./Flag_of_Germany.png"
-         width=225" height="105">
-      </a>      
-      <a href="https://youtu.be/yN10WGMZfes">
-         <img alt="English" src="./Flag_of_the_United_Kingdom.png"
-         width=225" height="105">
+      <img alt="VillaValwig" src="./VillaValwig.png"><br>
+      <a href="https://83.81.5.35:8000/"/>
       </a>
    </body>
 </html>
