--- a/villavalwig.htm
+++ b/villavalwig.htm
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
 <html>
    <head>
-      <title>Ilse</title>
+      <title>Villa Valwig Reservation</title>
    </head>
+   <p>Villa Valwig Reservation</p>
    <body>
       <img alt="VillaValwig" src="./VillaValwig.png"><br>
       <a href="https://83.81.5.35:8000/"/>
