--- a/villavalwig.htm
+++ b/villavalwig.htm
@@ -3,10 +3,10 @@
    <head>
       <title>Villa Valwig Reservation</title>
    </head>
-   <p>Villa Valwig Reservation</p>
+   <h1>Villa Valwig Reservation</h1>
    <body>
       <img alt="VillaValwig" src="./VillaValwig.png"><br>
-      <a href="https://83.81.5.35:8000/"/>
+      <a href="http://83.81.5.35:8000/"/>
       </a>
    </body>
 </html>
