--- a/villavalwig.htm
+++ b/villavalwig.htm
@@ -1,14 +1,9 @@
 <!DOCTYPE html>
 <html>
-   <h1>Villa Valwig Reservation</h1>
-   <body>
-      <a href="http://83.81.5.35:8000/"/>
-        <head>
-          <title>Villa Valwig Reservation</title>
-        </head>
-        <img alt="VillaValwig" src="./VillaValwig.png"><br>
-      </a>
-      </a>
-   </body>
+    <body>
+        <p style="font-size:60px">
+        <a href="http://83.81.5.35:8000/"/> Villa Valwig Reservation</a><br>
+        <img alt="VillaValwig" src="./VillaValwig.png">
+    </body>
 </html>
 
